--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,12 +46,15 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
+        //multiDexEnabled true
     }
 
     dependencies {
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
+        implementation 'com.microsoft.clarity:clarity:2.3.0'
+       // implementation 'androidx.multidex:multidex:2.0.1'
     }
 
     testOptions {
